tekton-pipelines/event-listner-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trigger-ingress
  namespace: lovechedule
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /tektontrigger
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /tektontrigger
            pathType: Prefix
            backend:
              service:
                name: el-lovechedule-eventlistner
                port:
                  number: 8080
