tekton-pipelines/tekton-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:327066177061:certificate/c049234d-8e0e-4daa-9ab5-323e53aa61ee"
spec:
  ingressClassName: "alb"
  rules:
  - host: tekton.lovechedule.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tekton-dashboard
              port:
                number: 9097
